--- a/email_sender/email_send/templates/email.html
+++ b/email_sender/email_send/templates/email.html
@@ -43,5 +43,6 @@
             padding: 15px;">
         <h4>Email sending test</h4>
     </div>
+    <img src="{{image_url}}" height="0px" width="0px"/>
 </body>
 </html>
